samples/_failures_safe/1761158546_37fb32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4ec2c82.c: In function ‘main’:
./samples/SAFE/__tmp_b4ec2c82.c:154:31: error: expected ‘)’ at end of input
  154 |     double cpu_time = ((double
      |                        ~      ^
      |                               )
./samples/SAFE/__tmp_b4ec2c82.c:154:5: error: expected declaration or statement at end of input
  154 |     double cpu_time = ((double
      |     ^~~~~~
